Update 6.1P Chameleon T2_2023.md
- Update Executive summary 
- Update Leadership team members
- update company structure image
- update Trimester goals and objectives

--- a/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
@@ -113,65 +113,71 @@ Both EVAT and MOP leverage datasets from several sources including data generate
 The EV Adoption Tools division currently has two projects underway. The first is a mobile application to help EV drivers locate and navigate to charging stations that meet the needs of their vehicles. The second uses big data to analyse the density of EV ownership, main transport routes (amongst other things) and recommends optimal locations for new EV Charging stations. 
 
 <h4 style="color:#336699; text-align:left;">MOP</h4>
-The City of Melbourne Open data division has been engaged with Melbourne City to support greater use of their Open Data library by businesses, researchers, and software developers. MOP delivers an educational portal that demonstrates how to leverage Open Data using real-world scenarios which helps Melbourne City achieve one of their key strategic goals.
+The City of Melbourne Open Data Project engages with The City of Melbourne to support a greater use of their Open Data library for businesses, researchers, and software developers. The Melbourne Open Playground (MOP) is an educational portal that demonstrates how to leverage open data using real-world scenarios in order to assist The City of Melbourne to achieve key strategic goals.
 
 <h4 style="color:#336699; text-align:left;">CW</h4>
-The Chameleon Website aims to accumulate all the information about the Chameleon company overall to present in a format that is pleasantly designed, laid out, easy to navigate and useful components to display the progress of all 3 projects while outlining their goals. Which aims to provide a one-stop portal to different links and sub-projects within the company.
+
+The Chameleon Website aims to accumulate all the information about the Chameleon company and present it in a format that is pleasantly designed, laid out, easy to navigate and displays the progress of each of its three projects and outlines their goals. This project aims to provide a one-stop portal to different links and sub-projects within the company.
 
 <a name="leadership-team"></a><h1 style="color:#336699">Leadership Team</h1>
 
-**Acting Director:** Chathu Ranaweera.
+**Acting Director:** Azadeh Ghari Neiat.
 
-**Company Board:** Chathu Ranaweera , Mick Wiedermann, Angie Hollingworth, Janvi Gupta.
+**Company Board:** Azadeh Ghari Neiat, Jon Suwannakoot, Barry Chen, Mollie Fernandez, Yesini Charithma Liyanage, Jordan Sam Cooke
 
 <h4 style="color:#336699; text-align:left;">EV Adoption Tools</h4>
-<b>Group Project Lead:</b> Mick Wiedermann
+<b>Group Project Lead:</b> Yesini Charithma Liyanage & Jordan Sam Cooke
 
-EV Charger Forecasting & Location Optimisation (_sub project 1)_
-- Sub Project Lead Barry Chen
-- Web Dev Lead: Yesini Charithma Liyanage
-- Data Science Lead: Scott West & Ishika Khanna
+<h5> EV Charger Forecasting & Location Optimisation (_sub project 1)_ </h5>
+- Sub Project Lead: Yesini Charithma Liyanage
+- Web Dev Lead: Mark Premier
+- Data Science Lead: Jamie Connor Davidson
+- Web Dev Co-lead: Ishika Khanna
+- Data Science Co-Lead: Jennifer Yau 
+
 
 Evoleon Mobile Application (_sub project 2_)
-- Sub Project Lead: Joel Murph-Dyer & Jordan Sam Cook
+- Sub Project Lead: Jordan Sam Cooke 
 - App Dev Lead: Aanan Abdullah
+- App Dev Co-Lead: Joel Murphy-Dyer 
+
+<h4 style="color:#336699; text-align:left;">Melbourne Open Data Project</h4>
+<b>Project Leads:</b> Barry Chen & Mollie Fernandez
 
 
-<h4 style="color:#336699; text-align:left;">Melbourne Open Data</h4>
-<b>Project Lead:</b> Angie Hollingworth
+- Data Science Leads:Shanuk Julian Devamulla,Keefe Euler Alpay, Vaibhav Kashyap, SimranJit Singh, Yash Krupanand Daware 
+- Web Development Lead: Jiahao Pen, Yashika Arora
+- Security Team Lead: Izaz Ishaque , Amby Sarrazin, Michael Wei Zhang
 
-- Data Science Leads: Vaibhav Kashyap, Vinit Karunakar, Abhishek Bajaj
-- Web Development Lead: Tate Remzi-Johnson
-- Security Team Lead: Izaz Ishaque
 
 <h4 style="color:#336699; text-align:left;">Chameleon Website</h4>
-<b>Project Lead:</b> Janvi Gupta
+<b>Project Lead:</b> Jon Suwannakoot
 
-- Web Development Lead: Navin Dharamrajan & Mayank Verma
-- Design Team Lead: Zak Constable
-- Assistant Design Lead: Jon Suwannakoot
+
+- Web Development Lead: Aaron Vandersluys, Davinderjit Singh, Satyam Raina, Mukund Nivas Srinivasan
+- Design Team Lead: Jon Suwannakoot 
+- Assistant Design Lead: Brodie McCann 
 
 <br>
 <br>
 
 # <a name="company-structure"></a><h1 style="color:#336699">Company Structure</h1>
 
-<img src="Images/Company_Structure.png" alt= "Company Structure" width="745" height="295">
+<img src="https://gcdnb.pbrd.co/images/KmSgnbC20dhg.png?o=1%22" alt= "Company Structure" width="600" height="550">
 
 
-# <a name="tri-goals"></a><h1 style="color:#336699">Trimester Goals & Objectives</h1>
+### <a name="objectives"></a>Trimester 2 2023 Objectives
+As well as moving each of the Chameleon projects closer to their overall goals, we have identified the following areas for improvement this trimester.
 
-### <a name="objectives"></a>T1-2023 Objectives
-Along with moving each of the Chameleon projects forward, closer to their overall goals, we have identified the following areas for improvement this trimester.
 
-- Document a policy for creating and storing documents with a focus on storing and managing key company documents on GitHub. Once created, migrating company documents to GitHub converting them to markdown in the process.
+- Create and document a policy for the creation and storage of documents with a focus on storing and managing key company documents on GitHub. The process will include, migrating company documents to GitHub and converting them to markdown in the process.
 - Document the best practice policy for the maintenance of the company’s GitHub repository, this is to include how to prepare the repository for handover at the end of the trimester. 
-- Document a policy and procedure for the overall handover process for the company making it seamless for future students to take the lead. This involves:
+- Document a policy and procedure for the overall handover process for the company making it seamless for future studentsb fvc. This involves:
     - Centralising credentials and resources used throughout the company.
-    - Have multiple junior students (who are on lead) brought into the handover process across all projects so that the knowledge does not sit with one team, project or person.
-- Introduce cross-collaboration across all projects within the company
+    - Have multiple junior students brought into the handover process across all projects so that the knowledge does not sit with one team, project or person.
+- Introduce cross-collaboration across all projects within the company including:
     - Sharing teams such as design & security
-    - Have multiple cross-company meetings to get all team members (especially the juniors) familiar with the company as a whole.
+    - Having multiple cross-company meetings to get all team members (especially the juniors) familiar with the company as a whole.
     - Share wins, roadblocks, resources and topics across similar teams from other projects.
 - Introduce and document Cyber Security best practices, and stress tests across all projects. This will introduce future tasks that the web development teams can complete.
 - Implement a Design plan across all projects that details the colour scheme to layouts to high-fidelity quality produced wireframes with quality prototyping. 
@@ -234,7 +240,6 @@ Convert the old HTML/CSS website to new website that using React framework and a
 | **Jamie Connor Davidson** | 222356461 | Postgrad | Junior | Data Science |  |On the Data Science Team, I have written and completed Trello card items, attended weekly team meeting to update my progress, created a file structure, naming convention, reference and workflow and readme files for the EVCFLO/datasets. I have been working on creating datasets and notebooks to improve the way we perform data analysis, and prepare data for modelling.|
 | **Siqin Chen** | 221115918 | Postgrad | Senior | Data Science |  |conducted extensive research on the topic of electric vehicle (EV) range, ensuring a thorough understanding of its definition and various types; gathered data on the EV range of popular models available in the market; utilized Python to create a script for cleaning the dataset and visualize it; compiled a comprehensive document to detail the dataset and analyze the results.|
 | **Viola Cherotich Meli** | 221187491 | Postgrad | Senior | Data Science |  |conducted research on EV, in melbourne, my user story was on determining the wait time per charging station, in the first sprint I have been able to use the already collected dataset since i found most of them that were collected last trimester more suitable for my case..I did alot of data cleaning and EDA using python and uploaded a comprehensive document on the same. In this second sprint am working on implementing machine learning models that would be used on predicting the wait time.|
-| **Chaoyi (Barry) Chen** | 220358865 | Postgrad | Junior | Web Dev, Project | Yes |Being the project lead, I have co-hosted weekly team meeting and written minutes, assisted on broken down user stories into actionable Trello card items, organise and properly setup Trello board, reviewed and organised GitHub resources, facilitate team communication and operation. I have reviewed and provided summary report of all data analysis, AI/ML models that have built for the project to support Data science team, and I have also built AI models webpage and added contents based on React framework as Web Dev member of the team.|
 | **Ishika Khanna** | 219551957 | Undergrad | Junior | Web Dev | Yes |  |
 | **Arnold Prabudda Kalpesh Mendis** | 222330109 | Undergrad | Junior | Web Dev |  |As an active member of the web dev team, I have prepared several user stories such as a chatbot and a submission form that will help to achieve a better outcome through our EVCFLO website. Furthermore, I have fully developed a user submission form using React JS frontend technology, which helps us to insert records into our company database regarding the required EV charging stations in specific areas.|
 | **Mark Justin Premier** | 222115089 | Postgrad | Junior | Web Dev |  |Being a member of the frontend web dev team, I implemented the React framework to create a new and more functional frontend of the website, and migrated across most of the work from the previous website into the new website. I've also been helping other team members understand the React framework, so we all can contribute.|
