--- a/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
@@ -318,34 +318,37 @@ The City of Melbourne has been an Australian leader in Open Data since 2014. The
 
 This project entails the development of an educational platform that showcases the practical applications of Open Data, specifically designed to cater to the needs of various stakeholders, such as industry professionals, government entities, and academic researchers. The primary objective of this project is to leverage the utilisation of the City of Melbourne's Open Data.
 
-The long-term goal is to data useage, facilitating innovative and informed solutions to contemporary challenges across the City of Melbourne council area.
+The long-term goal is to data usage, facilitating innovative and informed solutions to contemporary challenges across the City of Melbourne council area.
 
-#### Aims this Trimester
+#### Aims This Trimester
 
-The initial main focus is to read the documentation for the new API for the Melbourne Open Data Playground, and systematically work through each published (and yet to be published) notebooks and modify the code so that they will run if downloaded.
+The initial main focus is to understand the documentation for the project's new API and systematically work through each published (and yet to be published) notebooks and modify the code so that they will run if downloaded.
 
-The aim for the Data Science team is to create a new set of use cases that fit within the 3 defined key areas of interest from the City Of Melbourne. The team is planning to complete a full set of use cases, and also have enough in the backlog for the next trimester when students will be focussed on InnoFes.
+The aim for the Data Science team is to create a new set of use cases that fit within the 3 defined key areas of interest from the City Of Melbourne. The team is planning to complete a full set of use cases.
 
-The web team is aiming to further streamline the processes for which the notebooks are published, and working with the design team to optimise the device browsing of our website. As part of the approach to the website, the cyber security team will also be scrutinising all apsects of our public-facing site to look for areas of vunerabilities that will need to be rectified.
-The other main focus for the leadership is to document and streamline the way that the project is documented for handover at the end of each trimester.
+The web team is aiming to further streamline the processes for which the notebooks are published, and working with the design team to optimise the device browsing of our website. As part of the approach to the website, the cyber security team will be conducting tests and an audit, not only for the City of Melbourne Project project but also throughout the whole of Chameleon to ensure that all projects are up to par when it comes to security, all tests will be reported and if there any major issues detected within any of the projects the securiity team will ensure the best practices are being implemented.
 
 
 #### Deliverables
 
-- Update the API on all published notebooks (ready to be published again), and notebooks ready for publishing.
-- Implement a human-readable URL
-- Identify vulnerabilities in the source code, python code and database then document a roadmap to mitigatethem
-- Implement mobile views for the website
-- Complete analysis on multiple use cases (ready for publishing)
-- Create multiple new use cases, allowing enough in the backlog for the next trimester
-- Publish notebooks that are ready to be published
-- Cleaner resources for the handover procedures for MOP
-- Add more functionality to the website
-- Implement some interactivity with JavaScript
-- Fix the lingering deisgn / css issues within the website
+- Update the API on all remaining published notebooks - (Data Science Team)
+- Complete analysis on multiple use cases (ready for publishing) - (Data Science Team)
+- Create multiple new use cases, allowing enough in the backlog for the next trimester - (Data Science Team)
+- Publish notebooks that are ready to be published - (Data Science & Web Dev Team)
+- Cleaner resources for the handover procedures for MOP - (All Teams)
+- Fix deployment issues and Implement a human-readable URL- (Web Dev Team)
+- Add more functionality to the website- (Web Dev Team)
+- Implement some interactivity with JavaScript- (Web Dev Team)
+- Fix the lingering design / css issues within the website- (Web Dev Team)
+- Fix design / css issues on old user case pages- (Web Dev Team)
+- Identify vulnerabilities in the source code, python code and database then document a roadmap to mitigate them - (Cyber Security Team)
 
 #### Current Progress
-The Data Science team has successfully completed repointing some of the APIs for the completed use cases ready to be republished, and also developed new use case ideas and started coding them up in jupyter.  The Cyber Security team have found vunerabilities, and are continuously documenting how the various approaches have been approached, as well ashow should be approached for when transferring the team to the other Chameleon projects. The Web Dev team have worked on making the styling for the published use cases match the over all theme, published backlog use cases and have been working on the mobile functionality for the website. The web team and design team have also been liaising for the next steps to integrate the team designs.
+The Data Science team has...
+
+The Cyber Security team has... 
+
+The Web Dev team has...
 
 The list below outlines the team's main achievements so far:
 
@@ -359,40 +362,47 @@ The list below outlines the team's main achievements so far:
 
 
 #### Next Steps
-The Data Science team will be completing the sprint 1 use case explorations and API repointing this current sprint, with everyone moving on to the next lot of use cases (or API repointing). The team will also be running another use case ideation workshop to create another series of use case stories to build more of a backlog.
-The Security team will be focusing on implementing different types of attacks with different software to ensure vulnerabilities can be exposed allowing the Web Dev team to implement measures that will either prevent or stop these attacks as they happen. Members of the security team will also provide recommendations on any vulnerability that they do find. The web development team will be obtaining a new domain name for the website and also ensuring that the MOP website can access any relevant datasets using API links. 
+The Data Science team will...
+
+The Security team will...
+
+The web development team will... 
 
 
 #### Project Members
 
 | **Name** | **Student ID** | **UG/PG** | **J/S** | **Team** | **Lead** | **Achievements** |
 | :-- | :-- | :-: | :-: | :-: | :-: | :-- |
-| **Angie Hollingworth** | 222053804 | Undergrad | Senior | Data Science, Security, Board | Yes | I created and presented the Project Pitch for the juniors,  ran a workshop on working with APIs in python / Jupyter, defined the project scope for the Security Team, worked with the Dev Lead to ideate project ideas for the team, created a file for use case ideation for the Data Science team and walked them through it, ran the client presentation (with Remi from the City of Melbourne), ran a brainstorming workshop to generate use cases with the DS leads then presented them to the broader team, set up all Trello and created all the use case cards, worked on repointing 2 APIs and set up documentation for various aspects of the project. |
-| **Abhishek Bajaj** | 221034312 | Undergrad | Junior | Data Science | Yes | I have brainstormed new use cases to use from the datasets available in the City of Melbourne website with other leadership members, worked on repointing an API path for the project "new business location" (already published use case) with STEVEN NGUYEN and also started working on the new use case which records the performance of Melbourne against different Australia's fast growing municipalities with VAIBHAV KASHYAP. |
-| **Vaibhav Kashyap** | 220641102 | Undergrad | Junior | Data Science | Yes | I have brainstormed new use cases to use from the datasets available in the City of Melbourne website with other leadership members and working on new API to record the performance of Melbourne against different Australia's fast growing municipalities with ABHISHEK BAJAJ. |
-| **Vinit Karunakar Shetty** | 221426969 | Undergrad | Senior | Data Science | Yes |  |
-| **Kruthi Shetty** | 222067974 | Postgrad | Junior | Data Science |  |  |
-| **Keefe Euler Alpay** | 221243463 | Undergrad | Junior | Data Science |  |  |
-| **Nathan Graham Clee** | 221255235 | Undergrad | Junior | Data Science |  | I have set up APIs to gather information about foot traffic and locations of live events to find if events affect the foot traffic. I have coded graphs shows this with the MCG and other location of live events.  |
-| **Shanuk Julian Devamulla** | 221159324 | Undergrad | Junior | Data Science |  |  I have developed a new API for the pedestrian traffic analysis use case which analyzes pedestrian traffic and sensor data in the Melbourne CBD. Pedestrian function is still a work in progress but sensor API is complete. |
-| **Siyu Ai** | 223008124 | Postgrad | Junior | Data Science |  | I have set up a new use case UHI (Urban heat Island) effect reduction. Data sets for data analysis were selected and data extraction was performed. |
-| **Steven Nguyen** | 222337088 | Undergrad | Junior | Data Science |  | Working with ABHISHEK BAJAJ on updating the API path for the project "new business location" (already pushed use case) and currently working on the new use case Transport and Safety use case "population and accident" about car accidents hotspots in the cbd with pedestrians.  |
-| **Adam James Bullivant** | 219274937 | Undergrad | Senior | Data Science |  | I am a member of the Chameleon MOP Data Science team, and during this time I have repointed x2 APIs to fix existing use cases. I have also started working on a new use case for disability services. So far, x3 datasets have been imported and currently visualise the services around the City of Melbourne. |
-| **Andrew Tilling** | 220554762 | Postgrad | Senior | Data Science |  | I have repointed the API for the greening of buildings existing use case to GitHub.  Contributed to team meetings and continuing to work with the datasets to recreate the use case |
-| **Tuan Minh Vu** | 219595908 | Undergrad | Senior | Data Science |  | I have learned to develop a new API for St Kilda new bikelane road. I have analyzed and integrated key concepts and new data from the City of Melbourne to ensure that the new API was developed with maximum efficiency and effectiveness in mind. So that the new API can be used to optimize bikers' routes and provide real-time information on traffic, weather, and other important factors. |
-| **Amy Tran** | 213358131 | Undergrad | Junior | Data Science | | I have gathered data from City of Melbourne Open Data through API call, to create a heatmap that showcases the projection of energy consumption across Melbourne city. Energy consumption has an impact on the surrounding air temperature. The heatmap is supposed to help urban planners identify and prioritize locations for greening work. |
-| **Tate Remzi-Johnson** | 221484111 | Undergrad | Senior | Dev Team | Yes | I have been leading the MOP Web Development team, providing assistance where needed to team members. I have also been working on technical documentation for the MOP web development team, and have finished a new guide for the publishing of use cases, which was a long task to be done each trimester but not well documented. |
-| **Jiahao Pan** | 218562599 | Postgrad | Junior | Dev Team |  | Working in a group which is going to fix old design on previous user cases pages. I have fixed three user cases pages and make sure these follow up the newest design. |
-| **Mihili Isurika Geeganage Geeganagama Arachchige** | 222398483 | Undergrad | Junior | Dev Team |  | I am a member of the fixings old page designs group. Now I am working with three pages. They are event- distruption, greenroof and Ideal green wall location identification. I change their css and designed those pages to have good look. |
-| **Roshan Jose** | 221499484 | Postgrad | Junior | Dev Team |  | I am on the web development design team and was assigned to the updating the mobile view group for fixing some general, scaling issues and navigation bar. It's a work still in progress. |
-| **Syed Kareemullah** | 220462373 | Undergrad | Junior | Dev Team |  | I was in a group to fix the Old designs so I reviewed three user cases ( Parking Availability , Bicycle networks and Road safety Part 1, Bicycle networks and Road Safety Part 2) and fixed their designs to make them more consistent and appealing. |
-| **Muhammed Nihal** | 221461233 | Postgrad | Junior | Dev Team |  | Working with the homepage redesign team. Fixing the API call. It's a work in progress. |
-| **Matthew Hall** | 220236048 | Undergrad | Senior | Dev Team |  | I have worked on developing the navigation bar and fixing issues relating web development. Worked on Trello, getting in contact with the team, and solving problems from the deliverable.  |
-| **Pramodya Sathsarani Senanayaka Jayasundara Senanayaka** | 221308586 | Postgrad | Senior | Dev Team |  |  |
-| **Sharini Mahisha De Mel** | 217425821 | Undergrad | Senior | Dev Team |  | I was in a group to fix the navigation bar for mobile views, scaling issues and general fixes . And solving problems from deliverables. |
-| **Izaz Ishaque** | 221005704 | Undergrad | Junior | Cyber Security | Yes |  I have stress tested the website using siege to simulate how many concurrent users can access the web page at once before it becomes unusable (The website will start to fail at a rate of 50% when there are roughly 10000 users simultaneously using it). I have also  been using different tools to analyze the website and have found out that the website is using an outdated javascript library which could leave it vulnerable to further attacks. |
-| **Lucas Kocon** | 218510242 | Undergrad | Junior | Cyber Security |  |  In the first sprint I contributed to the project by inspecting the website's source code for security vulnerabilities. I had found the cause for its vulnerability to well-known security attacks with its lax content security policy, as well as finding credentials written and shared in plaintext. |
-| **Zachary Max Kein** | 220277143 | Undergrad | Junior | Cyber Security |  | Discovered various open TCP and UDP ports on the MOP web app and created documentation that describes how to fix the issues and ways to bolster the security of the website. |
+| **Chaoyi (Barry) Chen** | 220358865 | Undergrad | Senior | MOP Project Co-Lead, Data Science | Yes | |
+| **Mollie Fernandez** | 217285498 | Postgrad | Junior | MOP Project Co-Lead, Cyber Security | Yes |  |
+| **Vaibhav Kashyap** | 220641102 | Undergrad | Senior | Data Science | Yes | |
+| **SimranJit Singh** | 222429305 | Postgrad | Junior | Data Science | Yes |  |
+| **Kruthi Shetty** | 222067974 | Postgrad | Senior | Data Science | Yes | |
+| **Yash Krupanand Daware** | 222482648 | Postgrad | Junior | Data Science | Yes | |
+| **Shanuk Julian Devamulla** | 221159324 | Undergrad | Senior | Data Science | Yes | |
+| **Keefe Euler Alpay** | 221243463 | Undergrad | Senior | Data Science | Yes | |
+| **Nathan Graham Clee** | 221255235 | Undergrad | Senior | Data Science |  |  |
+| **Siyu Ai** | 223008124 | Postgrad | Senior | Data Science|  |  |
+| **Steven Nguyen** | 222337088 | Undergrad | Senior | Data Science |  |  |
+| **Jackson Tran** | 219219244 | Undergrad | Junior | Data Science |  |  |
+| **Siju Deng** | 222376251 | Postgrad | Junior | Data Science |  |  |
+| **THI THANH QUYEN (Amy) Tran** | 213358131 | Undergrad | Senior | Data Science | |  |
+| **Prathibha Kandawala** | 222440671 | Postgrad | Junior | Data Science |  | |
+| **Jiahao Pan** | 218562599 | Postgrad | Senior | Dev Team | Yes |  |
+| **Yashika Arora** | 221080858 | Undergrad | Junior | Dev Team | Yes |  |
+| **Ramandeep Singh** | 222196318 | Undergrad | Junior | Dev Team |  |  |
+| **Syed Kareemullah** | 220462373 | Undergrad | Senior | Dev Team |  |  |
+| **Amulya Gyawali** | 219365275 | Undergrad | Junior | Dev Team |  |  |
+| **Izaz Ishaque** | 221005704 | Postgrad | Senior | Cyber Security | Yes |  |
+| **Amby Sarrazin** | 220321559 | Undergrad | Junior | Cyber Security | Yes |  |
+| **Michael Wei Zhang** | 221282074 | Undergrad | Senior | Cyber Security | Yes |  |
+| **Mariam Kassar** | 220234902 | Undergrad | Junior | Cyber Security | Yes | | 
+| **Roshan Jose** | 221499484 | Postgrad | Senior | Cyber Security |  | |
+| **Muhammed Nihal** | 221461233 | Postgrad | Senior | Cyber Security |  | | 
+| **Basilia Carmel Sethu** | 221491966 | Postgrad | Senior | Cyber Security |  | |  
+| **Zachary Max Kein** | 220277143 | Undergrad | Senior | Cyber Security |  | |
+| **Antony Raju** | 221471405 | Postgrad | Senior | Cyber Security |  | |
+| **Amal Paul** | 222197619 | Postgrad | Senior | Cyber Security | | |
 
 
 ## <a name="cham"></a><h2 style="color:#336699">Chameleon Website</h2>
