Updated 6.1P for Chameleon Website
Update members of the Chameleon website, goals, objectives, airs, progression, and achievement.

--- a/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/6.1P Chameleon T2_2023.md
@@ -413,73 +413,77 @@ The website for the Chameleon company overall aims to publicise the achievements
 
 #### Goals & Objectives
 
-The main objectives of this website is to provide a one-stop for all – where it includes all the other sub-companies’ infortmation, objectives and links. We want to be able to use this website to advocate for the company, and be able to promote it while having the website be visually appealing, and comes with easy functionality.
+The website’s main objective is to provide a single source for all Chameleon-related matters, including other sub-companies information, objectives and links. We want to use the Chameleon website to advocate for the company and promote it while having the website be visually appealing
+and come with straightforward functionality.
 
 #### Aims this Trimester
 
-The aim for this trimester will be to modify the front-end and the back-end of the website majority, and make it optimised for mobile access. While the backend hasn’t been implemented, it means we have a lot of scope to implement this from scratch. This includes setting up the staff log-in portal, implementing API’s with SendGrid and Mailchimp and creating a client portal.
+The aim for this trimester will be to modify the front-end and the back-end of the website and to make it optimised for mobile access. While the back-end has yet to be implemented, it means we have much scope to implement this from scratch. This includes setting up the staff log-in portal,
+implementing APIs with SendGrid and Mailchimp and creating a client portal.
 
-For the front-end of the website, we aim to make the website more appealing, with the design and web development skills of the students. We want to deliver a high-quality attrractive, easy to navigate and overall simple aesthetic of the website. This also means through using correct wireframing techniques within the design team, agreeing on a solid design that meets this criteria before implementing.
+For the front-end of the website, we aim to make the website more appealing with the students’ design and web development skills. We want to deliver a high-quality, attractive, easy-to-navigate and high usability website. To do this, we will implement correct wireframing and prototyping techniques to develop a solid design that meets requirements before implementation.
 
-It will be imporant for the Chameleon Website to present all the other projects for the Chameleon company on the website, while this has currently been started – links have not been provided. 
+It will be necessary for the Chameleon Website to showcase all the other projects being carried out by the Chameleon company. Therefore, incorporating these projects into the website has commenced, but links still need to be provided.
 
-Overall, reducing awkwardness on the website and providing a smooth experience is the overall aim for this trimester. 
+Overall, optimising the user website experience and reducing awkwardness is the primary aim for this trimester. 
 
 #### Web Dev Team Progress 
-This trimester, we have researched on databases so that they can be implemented within our user login pages, and along with this how API's can be used to implement this within our website. We focused on making our website more intuative and interactive for users, and created a SRS use cases document to continue using throughout the trimester. Additionally we also analysed for SEO startegy works so our website can be presented higher on a search engine. As the research has now been compiled, we plan to start changing the website and coding in the backend API's.
+This trimester, we have researched on 
 
-#### Web Dev Team Design 
-The design team have developed low-fidelity designs, as well as produce high-fidelity designs for all pages of the Chameleon website. Researching and testing various colour schemes to create more modernised look with light and dark variations of the website. Research into the redevelopment of the Chameleon 'Resources' page has also identified the potential implementation of an event calendar to showcase company related events, FAQ and emerging IoT technologies. Development of low-fidelity page designs the EV Adoption Tools website has begun and the Evoleon mobile application is undergoing a redesign with the collaboration of the EV Adoption Tools web development team.
 
-The achievements so far can be seen in the list below:
-- Completed research on database in the case of user login
-- Use cases document has been created to help students analyse functionalities of the website
-- API research on Sendgrid and MailChimp
-- Designs being completed for majority of the website; lo-fi and hi-fi
-- User personas have been created for all 3 websites
+#### Web Design Team Progress
+This trimester, we focused on redesigning the Chameleon website so all pages are consistent. Then the web development team can base their code on that design. Thus, the final product of our website will be high usability with consistency. We also create new logos for our Chameleon website and MOP, showing our company's values to the public.  
+
+#### Our achievements so far are listed below:
+- Create the Chameleon website that is both visually appealing and easy to navigate, using the provided design from the design team as a guide
+- Redesign the EV website: Signin, About Us and FAQ
+- Redesign the Chameleon website: Homepage, About Us, Latest News, Profile, Login, Signup and Reset Password
+- Research Email's API and we decided to use Mailgun
+- Research the Resource page in the Chameleon website. We plan to add information about IoT, Smart Home/Cities, Transportation and Energy management systems
+- Research on SEO, CSS Framework and what information we will add in About Us page.
+
+
 
 #### Next Steps
-The next steps for the remainder of this trimester is to update the frontend code of the website to match the designs as produced by he design team, as well as work on the backend user signing in database and login setup and having this be functional. We also plan to implement a pop up notifcation subscriber method for users. Through the changes by the design team we have analysed the interaction of the website and how realisitic it will be for users. The design team will focus on working with the EV and MOP teams and their respective web development team leaders to begin design work for their websites and mobile applications. 
+The next steps for the remainder of this trimester is to update the frontend code of the website to match the designs as produced by the design team, as well as work on the backend to create 
+
+The design team will focus on working with the EV and MOP team leaders to complete design their websites and mobile applications. We will develop the remaining pages of the Chameleon website for the web development team to work on so they have high usability and consistency.   
 
 #### Deliverables
 
-- Implement a more aesthetic and navigation friendly design
-- Work on the blogging section of the website – add links to other projects
-- Build the staff portal and implement the API’s behind it to get it running
-- Reevaluate the Resources tab to see what can be added and removed from it
-- Work on the fonts used and colour scheme of the website, and adding in different components to the website design
-- Implement mobile views for the website
-- Implement SEO strategy to rank the website higher in web search engines
-- Building a client user account portal to view progress, updates and services of the Chameleon Projects
+- Implement a more aesthetic and navigation friendly website based on the design 
+- Eliminate vulnerababilities after receiving a report from the Cybersecurity team
+- New Chameleon Website and MOP logos
+- 
+-
+
 
 
 #### Project Members
 
 | **Name** | **Student ID** | **UG/PG** | **J/S** | **Team** | **Lead** | **Achievements** |
 | :-- | :-- | :-: | :-: | :-: | :-: | :-: |
-| **Janvi Gupta** | 221220324 | Undergrad | Senior | Project Lead, Board | Yes | Being the team leader, i kept the Trello board up-to date, hosted and compelted meeting minutes, helped did the lo-fi and hi-fi designs for design team, researched the web dev team related work. |
-| **Navin Dharmarajan** | 222475715 | Post Grad | Junior | Dev Team | Yes | My recent accomplishments on the Chameleon website project include creating a mono repo for the project, which contains both the frontend and backend apps, making it easier to manage and deploy. I also added sample codes for API creation and React pages with responsive design, and connected the created API to the React app, ensuring seamless integration between the frontend and backend. Furthermore, I prepared a detailed Readme doc for the Chameleon website, providing clear instructions on how to set up and use the project. In addition, I, along with Jhanvi and Mayank, created the initial SRS and Database design documents that formed the foundation of the project requirements and database structure. We also added use cases to further clarify and define the project's needs. Moreover, I made an announcement in the team about a new git update and reviewed documents created by other team members. I have attended all squad meetings.
-| **Davinderjit Singh** | 219606745 | Undergrad | Junior | Dev Team |  | Researched on the resource page, research on SEO strategy and important keywords for search engine optimization, re-designed the chameleon profile page (low-fi and hi-fi) |
-| **Antony Raju** | 221471405 | Post Grad | Junior | Dev Team |  | I am on the development team and i have done a research on the Search Engine Optimization. I have submitted my research about how to implement new SEO strategies and what all keywords can be used to increase the ranking of the Chameleon Website. |
-| **Bhavika Sood** | 218529556 | Undergrad | Junior | Dev Team |  |  researched on what features can be included on the home page of website and how could these be  incorporated and also worked on website code for progress of project. |
-| **Jordan Reeves** | 217140954 | Undergrad | Junior | Dev Team |  | So far my contributions for the team have been developing a functioning account and registration portal using firebase, implementing a database using FireStore and a creating tool for building and interacting with a local SQL database using python |
-| **Seung Hwan Kim** | 221393121 | Undergrad | Junior | Dev Team |  |
-| **Zhuo Yu Li** | 220283605 | Undergrad | Junior | Dev Team |  | Contribution-Collaborated with team members to complete some tasks. API research on MailChimp and provided some sample code. Research on API port and provided some sample code about how to connect to the database of MYSQL and Firebase Realtime Database. |
-| **Ziyan Zhai** | 221208796 | Undergrad | Junior | Dev Team |  | Research on API socket which include the coding sample of MySQL & Firebase. Provide another research report on Mailchimp cooperating with a group member together. |
-| **Aishwarya Mariselvam** | 221200552 | Post Grad | Senior | Dev Team |  |
+| **Jon Suwannakoot** | 220069966 | Undergrad | Senior | Project Lead, Design Team Lead | Yes | As the project leader, I presented the Chameleon website to junior students in week 1 to attract new students to our project. Afterwards, I allocated students to appropriate Chameleon Projects based on their skills as part of onboarding. Then, I ensure that the Trello board is up-to-date. Also, I hosted and completed meeting minutes and created the new logos for the Chameleon website and MOP projects as part of the design team tasks. Finally, I wrote the guideline on using GitHub Desktop as part of an onboarding for junior students. |
+| **Brodie McCann** | 219307567 | Undergrad | Junior | Design Team Co-leader | Yes |  |
+| **Aaron Vandersluys** | 221178806 | Undergrad | Junior | Dev Team | Yes | Created initial backlog of website team tasks in Trello. Researched, discussed, and observed findings (from other student’s research) and decided upon webmail API for use on Chameleon website. Researched and re-evaluated content to be added to resources section of website. Updated the resources website section to include new component stylings and links to display relevant information identified in content re-evaluation, added placeholder texts for new sections. Updated site navigation bar to include new resource page sections. Collaborated on task 2.1 P with other members of Chameleon leadership. Observed bigger picture and goals of Chameleon website project to lead other students towards completion of company goals. |
+| **Davinderjit Singh** | 219606745 | Undergrad | Senior | Dev Team | Yes |  |
+| **SATYAM Raina** | 222196882 | Undergrad | Junior | Dev Team | Yes |   |
+| **Mukund Nivas Srinivasan** | 219436166 | Undergrad | Junior | Dev Team | Yes |  |
+| **Wei Liang Tiew** | 220427347 | Undergrad | Senior | Dev Team |  | Contributed partially to the landing page, and is currently working on the news page. |
+| **Nitin Singh Dogra** | 221265784 | Undergrad | Senior | Design Team |  |  |
+| **Bhavika Sood** | 218529556 | Undergrad | Senior | Dev Team |  |  |
+| **Jordan Reeves** | 217140954 | Undergrad | Senior | Dev Team |  |
+| **Seung Hwan Kim** | 221393121 | Undergrad | Senior | Dev Team |  |
+| **ZhuoYu Li** | 220283605 | Undergrad | Senior | Dev Team |  | |
+| **Ziyan Zhai** | 221208796 | Undergrad | Senior | Dev Team |  |
+| **Thomas Koutsaplis** | 220233577 | Undergrad | Senior | Dev Team |  | Created a document summarising research on email API providers. Created a guideline on how to assess Chameleon's website's current SEO performance and methods to improve the SEO performance. |
 | **Aye Moh Moh Shwe** | 220462239 | Undergrad | Senior | Dev Team |  |
-| **Jiankun Wang** | 221092755 | Undergrad | Senior | Dev Team |  |Do the research on SendGrid and MailChimp,Learn the relevant knowledge. A user guide report was written, ready to put this knowledge into the future of the website construction work. To provide feasible solutions for the additional features of the homepage in website, to write a guideline report, |
-| **Mathew Ho** | 220271708 | Undergrad | Senior | Dev Team |  |
-| **Mayank Verma** | 219400263 | Undergrad | Senior | Dev Team | Yes | Being a Co-assistant web dev lead I have helped the leaders and team member. I made the research document on database on staff login portal, Then I have made the Gith Hub guide for all the members also I have worked with Janvi and Navin in preparing the SRS document for the website, made technical contribution with the design team in their mobile app high fi designs. Also worked with other leaders in the powerpoint presentation. I also made the website theme creation document document for developer they can pick one and start developing according to that |
-| **Qiushi Huang** | 221456822 | Undergrad | Senior | Dev Team |  |
-| **Regan Tam** | 219488177 | Undergrad | Senior | Dev Team |  | Conducted research in SEO strategies to help find solutions in improving Chameleons search engine visibility, along with research in the backend process with implementing a newsletter subscriber function. |
-| **Thomas Koutsaplis** | 220233577 | Undergrad | Senior | Dev Team |  | Conducted research on the features, advantages, and disadvantages of both MailChimp and SendGrid email APIs. I summarised the research in the form of a report where I clearly presented and explained which API provider is best suited for Chameleon based on their needs, taking into account other factors such as potential financial budgets and the abilities of team members to implement more advanced API features. |
-| **Amal Paul** | 222197619 | Undergrad | Junior | Dev team |  |  I am under Database team and researched strategy to adding tables, research on functionalities and  solutions for the chameleon team.  I been looking into team for more to contributions form my side.  |
-| **Balapuwaduge Arnold Pranudda Kalpesh** | 222330109 | Undergrad | Junior | Dev Team |  |  |
-| **Jiankun Wang** | 221092755 | Undergrad | Senior | Dev Team |  | Do the research on SendGrid and MailChimp,Learn the relevant knowledge,A user guide report was written， ready to put this knowledge into the future of the website construction work. To provide feasible solutions for the additional features of the homepage in website, to write a guideline report. |
-| **Rodney Tenzin Teswang** | 221156479 | Undergrad | Junior | Dev Team |  |  |
-| **Jon Suwannakoot** | 220069966 | Undergrad | Junior | Design Team | Yes | Created 6 User Personas for EV, Chameleon and MOP Projects. Helped with editing/submitting the document for Task 2.1P for Junior students. Created the Figma document on how to add the Template and uploaded it to GitHub. Created PNG files of the Chameleon Website Logo. Also, I made the Low-fidelity and Hi-fidelity design of the Chameleon website: Blog, Homepage, Resource pages (Event Calendar, FAQ and Emerging Technology) and Progress of our projects. Finally, I presented the Chameleon Website project in Week 5. |
-| **Zak Constable** | 220535629 | Undergrad | Senior | Design Team | Yes | As the design team leader I centralised all Chameleon company figma designs, centralised all design documentation in appropriate Git repositories, created a design team information guide to improve onboarding efficiency, provide feedback and guidance to team members and assist expanding Trello backlog. Technical contributions include, developing a design information board for each project design, create design components and begin work on redevelopment of the Evoleon mobile app design and prototyping. |
-| **Yin Chak Yiu** | 219352934 | Undergrad | Senior | Design Team |  |  |
-| **Ziyan Shen** | 219323496 | Undergrad | Senior | Design Team |  | Being a member of the Chameleon Design Team I have created low fidelity and high fidelity designs of the about Home page, Also Low-fi of Design mobile version of the website Resource for Chameleon website with their own light and dark themes. Doing one more page of blog low fi design. Discuss with the group on time to determine the design direction, and communicate in a timely manner when there are uncertain design issues. |
-| **Nitin Singh Dogra** | 221265784 | Undergrad | Junior | Design Team |  | Being a member of the Chameleon Design Team I have created low fidelity and high fidelity designs of the about us page, login page, and portfolio page for the Chameleon website with their own light and dark themes. Additionally, I have also created mobile version designs of the pages along with a design for an extended hamburger menu. |
+| **George Chia** | 219600175 | Undergrad | Junior | Dev Team |  |  |
+| **Navin Selvaraj** | 222056367 | Undergrad | Junior | Dev Team |  |  |
+| **Muhammed Rehan Qureshi** | 218062706 | Undergrad | Junior | Dev team |  |    |
+| **Tatiana Deinega** | 221117779 | Postgrad | Junior | Dev Team |  |  |
+| **MATHEESHA NIRVAN PALLIYAGURUGE** | 222506155 | Undergrad | Junior | Dev Team |  | Upskilled myself about the unit, project details and what specific needs from me. Researched about what webmail API would be much preferred for the chameleon website. Researched about how to publish the chameleon website with URL. Attended weekly mentor meetings and team meetings. Been in communication with the senior members on to get more in-depth knowledge about the uni and the project. |
+| **Yawen Liu** | 218616602 | Undergrad | Junior | Dev Team |  |  |
+| **Pranshul** | 222196274 | Undergrad | Junior | Dev Team |  |  |
+| **LIYA THOMAS** | 222506155 | Undergrad | Junior | Dev Team | Yes |  |
+| **VISHNU** | 222357806 | Postgrad | Junior | Dev Team |  |  |
